--- a/templates/start.html
+++ b/templates/start.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <form action = '/procForm' method = 'post'>
-      メッセージ：<input type = 'text' name = 'msg' size = 30>
+        xの値を入力：<input type = 'text' name = 'x' size = 10><br/>
+        yの値を入力：<input type = 'text' name = 'y' size = 10>
       <input type = 'submit' value = 'send'>
     </form>
 </body>
